# ml-serve

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
app/: config.py  main.py
app/api/: deps.py
app/api/v1/: ab_test.py  health.py  predict.py  router.py
app/middleware/: logging.py  metrics.py  rate_limit.py
app/models/: __init__.py  registry.py  sentiment.py
app/schemas/: __init__.py  requests.py  responses.py
app/services/: ab_testing.py  inference.py
infra/docker/: Dockerfile  Dockerfile.dev
infra/grafana/dashboards/: ml-serve.json
infra/prometheus/: prometheus.yml
scripts/: benchmark.py  load_test.py
tests/: conftest.py  test_ab_testing.py  test_health.py  test_metrics.py  test_predict.py  test_rate_limit.py
